test-app/testing-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: testing-flask
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: testing-flask
