test-app/testing-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: staging
  name: testing-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: test-flask.renaissance-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testing-flask
                port:
                  number: 5000
